feat: full integration of AI anomaly engine, gamification logic and frontend dashboards