@@ -1,6 +1,5 @@
 package edu.ehei.gitdock.gitdockauth.security;
 
-import jakarta.servlet.DispatcherType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -13,18 +12,16 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.servlet.util.matcher.MvcRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 
 import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true, securedEnabled = true)
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
@@ -32,71 +29,49 @@ public class SecurityConfig {
     private final AuthenticationProvider authenticationProvider;
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity, HandlerMappingIntrospector introspector) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // 1. Activer les CORS avec la config définie plus bas
+                .cors(Customizer.withDefaults())
 
-        // Constructeur de matcher MVC : Indispensable pour Spring Boot 3 + H2/Postgres
-        MvcRequestMatcher.Builder mvc = new MvcRequestMatcher.Builder(introspector);
-
-        httpSecurity
-                // .cors(Customizer.withDefaults())
-                .cors(cors -> cors.disable())
+                // 2. Désactiver le CSRF (Cause n°1 des 403 sur les requêtes POST)
                 .csrf(AbstractHttpConfigurer::disable)
+
+                // 3. Gestion des autorisations
                 .authorizeHttpRequests(req -> req
-                        // 1. Autoriser les erreurs internes (pour éviter les 403 sur les exceptions)
-                        .dispatcherTypeMatchers(DispatcherType.FORWARD, DispatcherType.ERROR).permitAll()
-
-                        // 2. ROUTES PUBLIQUES (Login, Register, Activation)
-                        // On utilise mvc.pattern() pour être sûr que ça matche
-                        .requestMatchers(mvc.pattern("/api/auth/authenticate")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/register")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/user-activation/**")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/password-reset/**")).permitAll()
-                        .requestMatchers(mvc.pattern("/error")).permitAll()
-
-                        // 3. ROUTES SÉCURISÉES
-                        .requestMatchers(mvc.pattern("/api/auth/users/available-roles")).authenticated()
-                        .requestMatchers(mvc.pattern("/api/auth/companies/**")).hasAuthority("ROLE_SUPER_ADMIN")
-                        .requestMatchers(mvc.pattern("/api/auth/projects/**")).authenticated()
-
-                        .requestMatchers(mvc.pattern("/api/auth/users/summaries")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/users/by-email")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/oauth/internal/token")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/users/internal/invite")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/user-activation/**")).permitAll()// Gestion des droits sur les utilisateurs
-                        .requestMatchers(mvc.pattern("/api/auth/users/internal/**")).permitAll()
-                        .requestMatchers(mvc.pattern("/api/auth/oauth/**")).authenticated()
-
-                        .requestMatchers(mvc.pattern("/api/auth/users/**")).hasAnyAuthority(
-                                "ROLE_SUPER_ADMIN",
-                                "ROLE_COMPANY_ADMIN",
-                                "ROLE_WORKSPACE_OWNER", // Votre rôle ID 3 est bien ici !
-                                "ROLE_MANAGER",
-                                "ROLE_DEVELOPER"
-                        )
-
-                        // 4. TOUT LE RESTE EST BLOQUÉ
+                        // On autorise TOUT ce qui commence par /api/auth/ ou /auth/
+                        .requestMatchers("/auth/**", "/api/auth/**").permitAll()
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**").permitAll()
+                        .requestMatchers("/error").permitAll()
+                        // Tout le reste demande un token JWT
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 4. Mode Stateless (pas de session JSESSIONID)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 5. Stratégie d'authentification
                 .authenticationProvider(authenticationProvider)
+
+                // 6. Ajouter ton filtre JWT avant le filtre standard
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return httpSecurity.build();
+        return http.build();
     }
 
-    /*
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        // Vos URLs frontend (Gateway et accès direct)
-        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000", "http://localhost:8080"));
-        config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Autoriser ton frontend
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        // Autoriser les méthodes standards
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        // Autoriser les headers nécessaires (dont Authorization pour le JWT)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "Origin"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-    */
 }
